--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@
 
 # [SECRET] Django secret key - used for cryptographic signing
 # Generate: python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
-SECRET_KEY=django-insecure-change-this-in-production-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+SECRET_KEY=CHANGE_ME_SECRET_KEY_DO_NOT_USE_IN_PRODUCTION
 
 # Debug mode: True for development, False for staging/production
 DEBUG=True
@@ -26,22 +26,12 @@ ALLOWED_HOSTS=localhost,127.0.0.1,web
 # ===============================
 # Database Configuration
 # ===============================
+# Database Configuration - MUST be changed in production!
 
-# Database name
-DB_NAME=iot_hub_db
-
-# Database user
-DB_USER=iot_user_db
-
-# [SECRET] Database password
-DB_PASSWORD=iot_password
-
-# Database host:
-# - For Docker Compose: use 'db' (service name)
-# - For local PostgreSQL: use 'localhost'
-DB_HOST=db
-
-# Database port
+DB_NAME=CHANGE_ME_DATABASE_NAME
+DB_USER=CHANGE_ME_DATABASE_USER
+DB_PASSWORD=CHANGE_ME_DATABASE_PASSWORD
+DB_HOST=localhost
 DB_PORT=5432
 
 # ===============================
@@ -60,7 +50,7 @@ CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.
 
 # [SECRET] JWT signing key - must be different from SECRET_KEY
 # Generate: python -c "import secrets; print(secrets.token_urlsafe(32))"
-JWT_SECRET_KEY=your-jwt-secret-key-here-minimum-32-characters-long
+JWT_SECRET_KEY=CHANGE_ME_JWT_SECRET_KEY_MINIMUM_32_CHARACTERS_REQUIRED
 
 # JWT algorithm (HS256 recommended for MVP)
 JWT_ALGORITHM=HS256
