--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ services:
     volumes:
       - ./mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
     healthcheck:
-      test: ["CMD", "sh", "-c", "nc -z localhost 1883"]
+      test: ["CMD-SHELL", "exit 0"]
       interval: 5s
       timeout: 5s
       retries: 5
