--- a/.env.example
+++ b/.env.example
@@ -28,7 +28,7 @@ DB_PASSWORD=iot_password
 ENABLE_TIMESCALEDB=false #NOTE: use lowercase true/false
 
 # Enable Seed Data on startup (set to true to populate initial data)
-ENABLE_SEED_DATA=false #NOTE: use lowercase true/false
+ENABLE_SEED_DATA=true #NOTE: use lowercase true/false
 
 # Database host:
 # - For local launch without Docker: use DB_HOST=localhost
