--- a/devops/prometheus.yml
+++ b/devops/prometheus.yml
@@ -10,7 +10,7 @@ scrape_configs:
           app: "prometheus"
 
   - job_name: 'django'
-    metrics_path: '/metrics'
+    metrics_path: 'prometheus/metrics'
     static_configs:
       - targets: ['web:8000']
         labels:
