--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ x-django-base: &django_base
       condition: service_healthy
     redis:
       condition: service_healthy
+    mosquitto:
+      condition: service_healthy
 
 services:
   swagger-ui:
@@ -107,6 +109,21 @@ services:
     depends_on:
       redis:
         condition: service_healthy
+
+  mosquitto:
+    image: eclipse-mosquitto
+    container_name: mosquitto
+    ports:
+      - "1883:1883"
+    networks:
+      - backend
+    volumes:
+      - ./mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
+    healthcheck:
+      test: ["CMD-SHELL", "exit 0"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
   media_data:
