--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-asgiref==3.11.0
+﻿asgiref==3.11.0
 Django==5.2.10
 psycopg==3.3.2
 psycopg-binary==3.3.2
@@ -9,4 +9,7 @@ django-cors-headers==4.9.0
 pytest-django==4.10.0
 pytest-cov==6.1.0
 pytest-mock==3.14.0
-pyjwt==2.8.0
+celery==5.3.6
+redis==7.0.1
+flower==2.0.1
+gunicorn==23.0.
