--- a/.env.example
+++ b/.env.example
@@ -45,12 +45,22 @@ ENABLE_TIMESCALEDB=false #NOTE: use lowercase true/false
 # Enable Seed Data on startup (set to true to populate initial data)
 ENABLE_SEED_DATA=false #NOTE: use lowercase true/false
 
+# Passwords for dev/test users created during seeding
+DEV_ADMIN_PASSWORD = DevSecurePass
+DEV_CLIENT_ALEX_PASSWORD = AlexClientPass
+DEV_CLIENT_JORDAN_PASSWORD = JordanClientPass
+
 # Database host:
 # - For local launch without Docker: use DB_HOST=localhost
 #   (make sure PostgreSQL is installed locally, database and user are created)
 # - For Docker Compose launch: use DB_HOST=db
 DB_HOST=db
 DB_PORT=5432
+
+# ===============================
+# Telemetry Ingestion Endpoint
+# ===============================
+TELEMETRY_URL = "http://web:8000/api/telemetry/"
 
 # ===============================
 # CORS Configuration
