--- a/docs/spectral.yaml
+++ b/docs/spectral.yaml
@@ -14,24 +14,28 @@ rules:
     given: "$.servers[*]"
     then:
       function: truthy
-      message: "Server entry must not be empty"
-      severity: warn
+    message: "Server entry must have a non-empty url"
+    severity: error
 
-  schema-must-have-examples:
-    description: "Schema must include example"
+  schema-should-have-example-or-examples:
+    description: "Every schema should have at least one example (example or examples)"
     given: "$.components.schemas[*]"
     then:
-      field: example
-      function: truthy
-      message: "Schema '{{path}}' must include at least one example"
-      severity: warn
+      - field: example
+        function: defined
+      - field: examples
+        function: defined
+        anyOf: true
+    message: "Schema '{{path}}' should have 'example' or 'examples'"
+    severity: error
 
   operation-description:
-    given: "$.paths[*][*].description"
+    given: "$.paths[*][get,post,put,patch,delete,options,head]"
     then:
+      field: description
       function: truthy
-      message: "Operation must have a description"
-      severity: error
+    message: "Operation must have a meaningful description (not empty)"
+    severity: error
 
   operation-summary-sentence-case:
     given: "$.paths[*][*].summary"
@@ -55,5 +59,52 @@ rules:
     given: "$.info.contact"
     then:
       function: truthy
-      message: "API info must include a contact"
-      severity: warn
+    message: "It is recommended to include contact information (email/url)"
+    severity: warn
+
+  responses-required:
+    given: "$.paths[*][get,post,put,patch,delete,options,head]"
+    then:
+      field: responses
+      function: truthy
+    message: "Operation must define at least one response"
+    severity: error
+  
+  response-should-have-2xx:
+    description: "Operation should define at least one 2xx response"
+    given: "$.paths[*][get,post,put,patch,delete,options,head].responses"
+    then:
+    - field: "200"
+      function: defined
+    - field: "201"
+      function: defined
+    - field: "204"
+      function: defined
+      anyOf: true
+    message: "Operation should have at least one successful (2xx) response"
+    severity: error
+
+  operation-tags-recommended:
+    given: "$.paths[*][get,post,put,patch,delete,options,head]"
+    then:
+      field: tags
+      function: truthy
+    message: "It is recommended to add tags to operations"
+    severity: warn
+
+  operation-id-required:
+    given: "$.paths[*][get,post,put,patch,delete,options,head]"
+    then:
+      field: operationId
+      function: truthy
+    message: "Every operation must have an operationId"
+    severity: error
+
+  operation-id-camelcase:
+    given: "$.paths[*][get,post,put,patch,delete,options,head].operationId"
+    then:
+      function: casing
+      functionOptions:
+        type: camel
+    message: "operationId '{{value}}' should be camelCase (not PascalCase)"
+    severity: error
