--- a/.github/workflows/lint-and-tests-api.yml
+++ b/.github/workflows/lint-and-tests-api.yml
@@ -2,7 +2,8 @@ name: API Contract Tests
 
 on:
   push:
-    branches: [ main, "us-2-7-api_documentation"]
+    branches:
+      - "**"
   pull_request:
     branches: [ main ]
 
